Modified constructor field and add method getTurn